<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ouest INSA</string>
    <string name="account_activity_title">Mon Profil</string>
    <string name="save">Enregistrer</string>
    <string name="account">Profil</string>
    <string name="website">Qui sommes-nous ?</string>
    <string name="help">Aide</string>
    <string name="apply">Postuler</string>
    <string name="in_progress">En cours&#8230;</string>
    <string name="already_apply">Demande envoyée</string>
    <string name="success_update">Mise à jour avec succès</string>
    <string name="success_apply">Demande envoyée</string>
    <string name="error_internet_connection">Vérifiez la connexion et réessayez</string>
    <string name="error_apply">Impossible de postuler. Veuillez réessayer ultérieurement.</string>
    <string name="error_account_not_fill">Impossible de postuler. Veuillez remplir votre profil.</string>
    <string name="error_save_account">Inpossible de sauvegarder vos informations. Veuillez réssayer.</string>
    <string name="error_malformed_url">Inpossible de sauvegarder vos informations. Vueillez vérifier vos URL.</string>
    <string name="error_mail_insa">Vous devez entrer une adresse mail INSA Rennes</string>
    <string name="no_details">Aucune information complémentaire disponible.</string>
    <string name="pending">Chargement des détails&#8230;</string>
    <string name="succed_save_account">Données enregistrées</string>
    <string name="department">Département</string>
    <string name="firstname">Prénom *</string>
    <string name="lastname">Nom *</string>
    <string name="mailINSA">Email INSA *</string>
    <string name="viadeo">URL Viadéo</string>
    <string name="linkedIn">URL LinkedIn</string>
    <string name="help_dialog_text">Merci d\'avoir téléchargé l\'application Ouest INSA.\n
        Vous avez maintenant la possibilité de découvrir les études en cours à la Junior-Entreprise de l\'INSA Rennes.\n
        En tant qu\'étudiant, vous avez aussi la possibilité de postuler à certaines de nos études présentées. 
        Nous vous contacterons par la suite.</string>

</resources>