<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:padding="8dp" >

    <EditText
        android:id="@+id/firstname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="100dp"
        android:layout_marginEnd="100dp"
        android:hint="@string/firstname"
        android:inputType="textPersonName"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/lastname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/firstname"
        android:layout_marginRight="100dp"
        android:layout_marginEnd="100dp"
        android:hint="@string/lastname"
        android:inputType="textPersonName"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/department"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lastname"
        android:layout_marginRight="100dp"
        android:layout_marginEnd="100dp"
        android:prompt="@string/department" />

    <EditText
        android:id="@+id/mailINSA"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/department"
        android:hint="@string/mailINSA"
        android:inputType="textEmailAddress"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/viadeo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mailINSA"
        android:hint="@string/viadeo"
        android:inputType="text"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/linkedIn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/viadeo"
        android:hint="@string/linkedIn"
        android:inputType="text"
        android:textSize="18sp" />

</RelativeLayout>